--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Oluwakemi's space on the internet">
+    <meta name="author" content="Oluwakemi Omoyeni">
+    <meta name="keywords" content="HTML,CSS,JavaScript,ReactJs,Angular,Flask,Python,Oluwakemi,Captressketh,Portfolio,Developer, Designer, Instructor, Freelancer, Omoyeni">
     <link rel="stylesheet" href="fontawesome-free/css/all.css">
+    <link rel="stylesheet" href="venobox/venobox.min.css">
+    <link rel="stylesheet" href="ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="aos/aos.css">
     <link rel="stylesheet" href="style.css">
     <title>Oluwakemi Omoyeni</title>
 </head>
@@ -16,14 +22,9 @@
                     <li class="logo"><a href="#">Captress<span>keth.dev</span></a></li>
                     <li class="item"><a href="#home" class="home">Home</a></li>
                     <li class="item"><a href="#about">About</a></li>
-                    <li class="item"><a href="#service">Services</a></li>
-                    <li class="item"><a href="#">Resume</a></li>
-                    <li class="item"><a href="#" class="contact">Contact Me</a></li>
-                    <!-- <li class="item">
-                        <i class="fab fa-github"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-linkedin"></i>
-                    </li> -->
+                    <li class="item"><a href="#projects">Projects</a></li>
+                    <!-- <li class="item"><a href="#resume">Resume</a></li> -->
+                    <li class="item"><a href="#contact" class="contact">Contact Me</a></li>
                     <li class="toggle"><span class="bars"></span></li>
                 </ul>
             </nav>
@@ -34,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <div class="discover" id="about">
+        <section class="discover" id="about">
             <div>
                 <img src="3.jpg" alt="" width="460" height="345">
             </div>
@@ -48,68 +49,32 @@
                     <button type="submit">I need a website <i class="fas fa-greater-than"></i></button><button type="submit" style="background: #2b2d42;">I'm looking to hire <i class="fas fa-greater-than"></i></button>
                 </div>
             </div>
-        </div>
-        <div style="display: flex; flex-direction: column; justify-content: space-around;width: 1000px;">
+        </section>
+        <section class="portfolio" id="projects">
+            <div style="padding-bottom: 10px;">
+                <h1>Projects</h1>
+            </div>
+            <div class="portfolio-item" id="portfolio-item">
             
-        </div>
-        <div class="services" id="service">
-            <!-- <div>
-                <h3>What I Do</h3>
-            <h1>My Services</h1>
-            </div> -->
-            
-            <div>
-                <i class="fa fa-laptop-code fa-2x"></i>
-                <h2>Clean Code</h2>
-                <p>My focus is to writing clean, well-formatted, semantic HTML5 by hand to make sure that the content is easy to read,
-                    easy to collaborate, trouble-shootand accessible.</p>
             </div>
-            <div>
-                <i class="fa fa-laptop-code fa-2x"></i>
-                <h2>User Interface</h2>
-                <p>I pride myself on writing CSS that is easy to read and build on. I focus on keepimg my CSS lean and fast to load, 
-                    and I make it a habit to stay up to date on current best practices.</p>
-            </div>
-            <div>
-                <i class="fa fa-laptop-code fa-2x"></i>
-                <h2>User Experience</h2>
-                <p>I pride myself on writing CSS that is easy to read and build on. I focus on keepimg my CSS lean and fast to load, 
-                    and I make it a habit to stay up to date on current best practices.</p>
-            </div>
-            <div>
-                <i class="fa fa-laptop-code fa-2x"></i>
-                <h2>Creative Design</h2>
-                <p>I pride myself on writing CSS that is easy to read and build on. I focus on keepimg my CSS lean and fast to load, 
-                    and I make it a habit to stay up to date on current best practices.</p>
-            </div>
-            <div>
-                <i class="fa fa-laptop-code fa-2x"></i>
-                <h2>Fast Support</h2>
-                <p>I pride myself on writing CSS that is easy to read and build on. I focus on keepimg my CSS lean and fast to load, 
-                    and I make it a habit to stay up to date on current best practices.</p>
-            </div>
-            <div>
-                <i class="fa fa-laptop-code fa-2x"></i>
-                <h2>SEO</h2>
-                <p>I pride myself on writing CSS that is easy to read and build on. I focus on keepimg my CSS lean and fast to load, 
-                    and I make it a habit to stay up to date on current best practices.</p>
-            </div>
-            <div>
-                <i class="fa fa-laptop-code fa-2x"></i>
-                <h2>Analytics</h2>
-                <p>I pride myself on writing CSS that is easy to read and build on. I focus on keepimg my CSS lean and fast to load, 
-                    and I make it a habit to stay up to date on current best practices.</p>
-            </div>
-            <div>
-                <i class="fa fa-laptop-code fa-2x"></i>
-                <h2>Digital Marketing</h2>
-                <p>I pride myself on writing CSS that is easy to read and build on. I focus on keepimg my CSS lean and fast to load, 
-                    and I make it a habit to stay up to date on current best practices.</p>
-            </div>
-        </div>
+        </section>
+        <!-- <section class="resume" id="resume">
+            <h1>Download my resume <a href="http://">here</a></h1>
+        </section> -->
+
+        <section class="contacts" id="contact">
+            <i class="fab fa-twitter fa-2x"></i>
+            <i class="fab fa-github fa-2x"></i>
+            <i class="fab fa-linkedin fa-2x"></i>
+            <i class="fab fa-whatsapp fa-2x"></i>
+        </section>
+        <a href="#" style="position: fixed; bottom: 0; text-align: center; text-decoration: none; color:#fff" class="contact">Download my resume here!</a>
     </main>
     <script src="js/jquery.js"></script>
     <script src="typed.js/typed.min.js"></script>
+    <script src="venobox/venobox.min.js"></script>
+    <script src="aos/aos.js"></script>
+    <!-- <script src="bootstrap/js/bootstrap.min.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 </html>
