added resume link

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <meta name="author" content="Oluwakemi Omoyeni">
     <meta name="keywords" content="HTML,CSS,JavaScript,ReactJs,Angular,Flask,Python,Oluwakemi,Captressketh,Portfolio,Developer, Designer, Instructor, Freelancer, Omoyeni">
     <link rel="stylesheet" href="fontawesome-free/css/all.css">
-    <link rel="stylesheet" href="venobox/venobox.min.css">
     <link rel="stylesheet" href="ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="aos/aos.css">
     <link rel="stylesheet" href="style.css">
-    <title>Oluwakemi Omoyeni</title>
+    <title>Oluwakemi Omoyeni's portfolio</title>
 </head>
 <body>
     <main>
@@ -58,23 +56,17 @@
             
             </div>
         </section>
-        <!-- <section class="resume" id="resume">
-            <h1>Download my resume <a href="http://">here</a></h1>
-        </section> -->
 
         <section class="contacts" id="contact">
-            <i class="fab fa-twitter fa-2x"></i>
-            <i class="fab fa-github fa-2x"></i>
-            <i class="fab fa-linkedin fa-2x"></i>
-            <i class="fab fa-whatsapp fa-2x"></i>
+            <a href=""><i class="fab fa-twitter fa-2x"></i></a>
+            <a href=""><i class="fab fa-github fa-2x"></i></a>
+            <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+            <a href=""><i class="fab fa-whatsapp fa-2x"></i></a>
         </section>
-        <a href="#" style="position: fixed; bottom: 0; text-align: center; text-decoration: none; color:#fff" class="contact">Download my resume here!</a>
+        <a href="oluwakemi-omoyeni.pdf"  download="oluwakemi-omoyeni.pdf" style="position: fixed; bottom: 0; text-align: center; text-decoration: none; color:#fff" class="contact">Download my resume here!</a>
     </main>
     <script src="js/jquery.js"></script>
     <script src="typed.js/typed.min.js"></script>
-    <script src="venobox/venobox.min.js"></script>
-    <script src="aos/aos.js"></script>
-    <!-- <script src="bootstrap/js/bootstrap.min.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 </html>
