added medium widget

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li class="item"><a href="#home" class="home">Home</a></li>
                     <li class="item"><a href="#about">About</a></li>
                     <li class="item"><a href="#projects">Projects</a></li>
-                    <!-- <li class="item"><a href="#resume">Resume</a></li> -->
+                    <li class="item"><a href="blog.html">Blog</a></li>
                     <li class="item"><a href="#contact" class="contact">Contact Me</a></li>
                     <li class="toggle"><span class="bars"></span></li>
                 </ul>
@@ -58,10 +58,10 @@
         </section>
 
         <section class="contacts" id="contact">
-            <a href=""><i class="fab fa-twitter fa-2x"></i></a>
-            <a href=""><i class="fab fa-github fa-2x"></i></a>
-            <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
-            <a href=""><i class="fab fa-whatsapp fa-2x"></i></a>
+            <a href="https://twitter.com/cap_keth"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="https://github.com/Captressketh001"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/oluwakemi-omoyeni-773970176/"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a href="wa.link/cqagi4"><i class="fab fa-whatsapp fa-2x"></i></a>
         </section>
         <a href="oluwakemi-omoyeni.pdf"  download="oluwakemi-omoyeni.pdf" style="position: fixed; bottom: 0; text-align: center; text-decoration: none; color:#fff" class="contact">Download my resume here!</a>
     </main>
