--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li class="item"><a href="#home" class="home">Home</a></li>
                     <li class="item"><a href="#about">About</a></li>
                     <li class="item"><a href="#projects">Projects</a></li>
-                    <li class="item"><a href="blog.html">Blog</a></li>
+                    <!-- <li class="item"><a href="blog.html">Blog</a></li> -->
                     <li class="item"><a href="#contact" class="contact">Contact Me</a></li>
                     <li class="toggle"><span class="bars"></span></li>
                 </ul>
@@ -29,25 +29,23 @@
             <div>
                 <div class="about-me" id="home">
                     <h2>Oluwakemi Omoyeni</h2>
-                    <h5>I'm <span class="typed" data-typed-items="a Developer, a Designer, an Instructor, a Freelancer"></span></h5> 
+                    <h5>I'm <span class="typed" data-typed-items="a Solution Developer, Detailed Driven, a Frontend Engineer"></span></h5> 
                 </div>
             </div>
         </div>
-        <section class="discover" id="about">
+        <!-- <section class="discover" id="about">
             <div>
                 <img src="3.jpg" alt="" width="460" height="345">
             </div>
             <div class="discover-me">
                 <h3>Discover</h3>
                 <h1>About Me</h1>
-                <p>My name is Oluwakemi Omoyeni. I am a Frontend Developer/ Web Developer based in Ogun, Nigeria and I'm very passionate and dedicated to my work. With my wealth of 
-                    experience, I have acquired the skills necessary to build great and Premium websites and applications. I also enjoy building everything
-                from small business sites to rich interactive web apps. If you are a business looking for online presence or an employer looking to hire, you can get in touch with me <a href="tel:+2348148202358" target="+2348148202358">here</a></p>
+                <p>I am a solution-oriented and result-driven Software Engineer who combines technical expertise, creativity, collaboration, and a passion for leveraging technology to address real-world challenges. My focus is always on achieving measurable results. I set clear objectives, define key performance indicators (KPIs), and track progress to ensure that the solutions I build have a tangible and positive impact. I don't just code, I build solutions.<a href="tel:+2348148202358" target="+2348148202358">here</a></p>
                 <div>
                     <button type="submit">I need a website <i class="fas fa-greater-than"></i></button><button type="submit" style="background: #2b2d42;">I'm looking to hire <i class="fas fa-greater-than"></i></button>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="portfolio" id="projects">
             <div style="padding-bottom: 10px;">
                 <h1>Projects</h1>
@@ -60,10 +58,10 @@
         <section class="contacts" id="contact">
             <a href="https://twitter.com/cap_keth"><i class="fab fa-twitter fa-2x"></i></a>
             <a href="https://github.com/Captressketh001"><i class="fab fa-github fa-2x"></i></a>
-            <a href="https://www.linkedin.com/in/oluwakemi-omoyeni-773970176/"><i class="fab fa-linkedin fa-2x"></i></a>
-            <a href="wa.link/cqagi4"><i class="fab fa-whatsapp fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/oluwakemi-omoyeni/"><i class="fab fa-linkedin fa-2x"></i></a>
+            <!-- <a href="wa.link/cqagi4"><i class="fab fa-whatsapp fa-2x"></i></a> -->
         </section>
-        <a href="oluwakemi-omoyeni.pdf"  download="oluwakemi-omoyeni.pdf" style="position: fixed; bottom: 0; text-align: center; text-decoration: none; color:#fff" class="contact">Download my resume here!</a>
+        <!-- <a href="oluwakemi-omoyeni.pdf"  download="oluwakemi-omoyeni.pdf" style="position: fixed; bottom: 0; text-align: center; text-decoration: none; color:#fff" class="contact">Download my resume here!</a> -->
     </main>
     <script src="js/jquery.js"></script>
     <script src="typed.js/typed.min.js"></script>
