--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="menu">
                     <li class="logo"><a href="#">Captress<span>keth.dev</span></a></li>
                     <li class="item"><a href="#home" class="home">Home</a></li>
-                    <li class="item"><a href="#about">About</a></li>
+                    <!-- <li class="item"><a href="#about">About</a></li> -->
                     <li class="item"><a href="#projects">Projects</a></li>
                     <!-- <li class="item"><a href="blog.html">Blog</a></li> -->
                     <li class="item"><a href="#contact" class="contact">Contact Me</a></li>
